fix(web-components): updated aria-hidden on mobile menu button
Updated aria-hidden to false due to interactive close button inside menu

--- a/packages/web-components/src/components/ic-top-navigation/ic-top-navigation.css
+++ b/packages/web-components/src/components/ic-top-navigation/ic-top-navigation.css
@@ -153,6 +153,15 @@ slot[name="toggle-icon"] svg {
   margin-left: var(--ic-space-md);
 }
 
+.menu-button-container .navigation-landmark-button-text {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
 .search-actions-container {
   display: flex;
 }
